[package]
name = "try_api"
version = "0.1.0"
authors = ["OUT-Shishlov1-DA <DAShishlov1@sberbank.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.23"
uuid = {version=   "0.8", features=["serde"] }
rust_decimal = "1.10.3"
sqlx = { version = "0.5.1", features = [ "postgres", "runtime-tokio-rustls",  "macros" ] }
opg = "0.0.32"
serde_yaml = "0.8"
anyhow = "1.0.38"
